--- a/app/src/main/res/layout/activity_done.xml
+++ b/app/src/main/res/layout/activity_done.xml
@@ -40,7 +40,7 @@
            <TextView
                android:id="@+id/txtTotalScore"
                android:layout_gravity="center"
-               android:text="@string/score_0"
+               android:text="score_0"
                android:textSize="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
