--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -24,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:gravity="center"
-                android:text="أفضل نقاط مسجل"
+                android:text="Best Score Recorded"
                 android:textSize="25sp"
                 android:textStyle="bold"/>
 
