--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -61,7 +61,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:freezesText="true"
-                android:text="سهل"
+                android:text="Easy"
                 android:textColor="@color/colorPrimaryDark" android:textSize="20sp"/>
 
 
@@ -145,5 +145,5 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="11dp"
         ads:adSize="BANNER"
-        ads:adUnitId="ca-app-pub-2710241286669528/1584870299" />
+        ads:adUnitId="@string/banner_test" />
 </RelativeLayout>
