--- a/app/src/main/res/layout-ldrtl/activity_playing.xml
+++ b/app/src/main/res/layout-ldrtl/activity_playing.xml
@@ -12,122 +12,159 @@
             android:layout_centerHorizontal="true"
             android:background="@drawable/zambia"
             android:contentDescription="TODO"
-            android:gravity="center" tools:layout_editor_absoluteY="16dp" tools:layout_editor_absoluteX="41dp"/>
+            android:gravity="center" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/relative1"/>
 
     <RelativeLayout
-            android:layout_width="366dp"
+            android:layout_width="0dp"
             android:id="@+id/relative1"
-            android:layout_height="382dp"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/question_flag"
             android:background="@drawable/round_corner"
-            android:paddingTop="20dp" tools:layout_editor_absoluteY="185dp" tools:layout_editor_absoluteX="14dp">
+            android:paddingTop="20dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="14dp"
+            android:layout_marginStart="14dp" android:layout_margin="4dp" android:layout_marginTop="18dp"
+            app:layout_constraintTop_toBottomOf="@+id/question_flag">
 
-        <LinearLayout
-                android:id="@+id/btnGroup"
+        <android.support.v7.widget.CardView
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="78dp"
-                android:orientation="vertical"
+                android:layout_height="wrap_content"
+                card_view:cardBackgroundColor="#d3d3d3"
+                card_view:cardCornerRadius="5dp"
+                android:elevation="5dp"
+                android:layout_margin="7dp"
+                android:layout_alignParentEnd="true" android:layout_marginLeft="7dp"
+                android:layout_alignParentLeft="true" android:layout_marginEnd="7dp"
+                android:layout_alignParentStart="true" android:layout_marginStart="7dp"
+                android:layout_alignParentRight="true" android:layout_marginRight="7dp" android:layout_marginTop="10dp"
+                android:layout_alignParentTop="true" android:layout_alignParentBottom="true"
+                android:layout_marginBottom="7dp">
 
-                android:paddingTop="10dp" android:layout_alignParentStart="true" android:layout_alignParentLeft="true">
 
             <LinearLayout
+                    android:id="@+id/btnGroup"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:weightSum="2">
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="78dp"
+                    android:orientation="vertical"
 
-                <TextView
-                        android:id="@+id/txtScore"
-                        android:layout_width="0dp"
+                    android:paddingTop="10dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true">
+
+                <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:background="@drawable/button_border"
-                        android:freezesText="true"
-                        android:gravity="center"
-                        android:text="@string/score"
-                        android:textSize="20sp"/>
+                        android:orientation="horizontal"
+                        android:weightSum="3">
 
-                <TextView
-                        android:id="@+id/txtQuestion"
-                        android:layout_width="0dp"
+                    <TextView
+                            android:id="@+id/wronganswercount"
+                            android:layout_width="89dp"
+                            android:layout_height="match_parent"
+                            android:text="@string/Wrong"
+                            android:textSize="16sp"
+
+                            android:background="#f6416c"
+                            android:textColor="@color/white1"/>
+
+                    <TextView
+                            android:id="@+id/txtQuestion"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="2"
+                            android:freezesText="true"
+                            android:gravity="center"
+                            android:text="@string/totalquestion"
+                            android:textSize="16sp" android:background="#00b8a9" android:textColor="@color/white1"/>
+
+
+                    <TextView
+                            android:id="@+id/txtScore"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:background="#3490de"
+                            android:freezesText="true"
+                            android:gravity="center"
+                            android:text="@string/correct"
+                            android:textSize="16sp" android:textColor="@color/white1"/>
+
+
+                </LinearLayout>
+
+                <ProgressBar
+                        android:id="@+id/progressBar"
+                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:freezesText="true"
-                        android:gravity="center"
-                        android:text="@string/totalquestion"
-                        android:textSize="20sp"/>
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginRight="8dp"
+                        android:max="30"/>
 
+                <Button
+                        android:id="@+id/btnAnswerA"
+                        style="@style/Widget.AppCompat.Button.Borderless"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:layout_margin="8dp"
+                        android:background="#ff8a80"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:freezesText="true"
+                        android:text="@string/answer_a"
+                        android:textColor="#FFFFFF"
+                        android:textStyle="bold"
+                        android:theme="@style/MyButton" android:textSize="24sp"/>
+
+                <Button
+                        android:id="@+id/btnAnswerB"
+                        style="@style/Widget.AppCompat.Button.Borderless"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:layout_margin="8dp"
+                        android:background="#ff8a80"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:freezesText="true"
+                        android:text="@string/answer_b"
+                        android:textColor="#FFFFFF"
+                        android:textStyle="bold"
+                        android:theme="@style/MyButton" android:textSize="24sp"/>
+
+                <Button
+                        android:id="@+id/btnAnswerC"
+                        style="@style/Widget.AppCompat.Button.Borderless"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:layout_margin="8dp"
+                        android:background="#ff8a80"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:freezesText="true"
+                        android:text="@string/answer_c"
+                        android:textColor="#FFFFFF"
+                        android:textStyle="bold"
+                        android:theme="@style/MyButton" android:textSize="24sp"/>
+
+                <Button
+                        android:id="@+id/btnAnswerD"
+                        style="@style/Widget.AppCompat.Button.Borderless"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:layout_margin="8dp"
+                        android:background="#ff8a80"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:freezesText="true"
+                        android:text="@string/answer_d"
+                        android:textColor="#FFFFFF"
+                        android:textStyle="bold"
+                        android:theme="@style/MyButton" android:textSize="24sp"/>
 
             </LinearLayout>
 
-            <ProgressBar
-                    android:id="@+id/progressBar"
-                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
-                    android:max="30"/>
-
-            <Button
-                    android:id="@+id/btnAnswerA"
-                    style="@style/Widget.AppCompat.Button.Borderless"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_margin="8dp"
-                    android:background="#ff8a80"
-                    android:foreground="?android:attr/selectableItemBackground"
-                    android:freezesText="true"
-                    android:text="@string/answer_a"
-                    android:textColor="#FFFFFF"
-                    android:textStyle="bold"
-                    android:theme="@style/MyButton" android:textSize="24sp"/>
-
-            <Button
-                    android:id="@+id/btnAnswerB"
-                    style="@style/Widget.AppCompat.Button.Borderless"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_margin="8dp"
-                    android:background="#ff8a80"
-                    android:foreground="?android:attr/selectableItemBackground"
-                    android:freezesText="true"
-                    android:text="@string/answer_b"
-                    android:textColor="#FFFFFF"
-                    android:textStyle="bold"
-                    android:theme="@style/MyButton" android:textSize="24sp"/>
-
-            <Button
-                    android:id="@+id/btnAnswerC"
-                    style="@style/Widget.AppCompat.Button.Borderless"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_margin="8dp"
-                    android:background="#ff8a80"
-                    android:foreground="?android:attr/selectableItemBackground"
-                    android:freezesText="true"
-                    android:text="@string/answer_c"
-                    android:textColor="#FFFFFF"
-                    android:textStyle="bold"
-                    android:theme="@style/MyButton" android:textSize="24sp"/>
-
-            <Button
-                    android:id="@+id/btnAnswerD"
-                    style="@style/Widget.AppCompat.Button.Borderless"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_margin="8dp"
-                    android:background="#ff8a80"
-                    android:foreground="?android:attr/selectableItemBackground"
-                    android:freezesText="true"
-                    android:text="@string/answer_d"
-                    android:textColor="#FFFFFF"
-                    android:textStyle="bold"
-                    android:theme="@style/MyButton" android:textSize="24sp"/>
-
-        </LinearLayout>
-
+        </android.support.v7.widget.CardView>
     </RelativeLayout>
 
     <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
@@ -137,7 +174,7 @@
                                        android:layout_alignParentBottom="true"
                                        android:layout_centerHorizontal="true"
                                        ads:adSize="BANNER"
-                                       ads:adUnitId="ca-app-pub-2710241286669528/1584870299"
+                                       ads:adUnitId="@string/banner_test"
                                        android:layout_marginStart="8dp"
                                        ads:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                                        android:layout_marginEnd="8dp" ads:layout_constraintEnd_toEndOf="parent"
