--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -59,7 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="سهل"
+                android:text="Easy"
                 android:freezesText="true"
                 android:textColor="@color/colorPrimaryDark" android:textSize="20sp"/>
 
@@ -140,5 +140,5 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="11dp"
         ads:adSize="BANNER"
-        ads:adUnitId="ca-app-pub-2710241286669528/1584870299" />
+        ads:adUnitId="@string/banner_test"/>
 </RelativeLayout>
