--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,10 @@
     <color name="colorPrimaryDark">#242E38</color>
     <color name="colorAccent">#0e63e2</color>
     <color name="backgroundPage">#242E38</color>
-    <color name="white">#000000</color>
+    <color name="black">#000000</color>
     <color name="red">#ff0000</color>
-    <color name="greengreen">#00fbff</color>
-    <color name="white1">#ffffff</color>
+    <color name="green">#17E91E</color>
+    <color name="optionBtnColor">#009688</color>
+    <color name="white">#ffffff</color>
+    <color name="cardBackgroundColor">#d3d3d3</color>
 </resources>
