--- a/app/src/main/res/layout/activity_done.xml
+++ b/app/src/main/res/layout/activity_done.xml
@@ -66,14 +66,11 @@
 
         </LinearLayout>
 
-        <com.google.android.gms.ads.AdView
-                xmlns:ads="http://schemas.android.com/apk/res-auto"
-                                           android:id="@+id/adView"
-                                           android:layout_width="wrap_content"
-                                           android:layout_height="wrap_content"
-                                           android:layout_alignParentBottom="true"
-                                           android:layout_centerHorizontal="true"
-                                           ads:adSize="BANNER"
-                                           ads:adUnitId="@string/banner_test" />
+        <FrameLayout
+                android:id="@+id/ad_view_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true" />
     </RelativeLayout>
 </RelativeLayout>
