--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -128,14 +128,10 @@
 
     </RelativeLayout>
 
-    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
-                                       android:id="@+id/adView"
-                                       android:layout_width="wrap_content"
-                                       android:layout_height="wrap_content"
-                                       android:layout_alignParentBottom="true"
-                                       android:layout_centerHorizontal="true"
-                                       android:layout_marginBottom="11dp"
-                                       ads:adSize="BANNER"
-                                       ads:adUnitId="@string/banner_test" />
-
+    <FrameLayout
+            android:id="@+id/ad_view_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true" />
 </RelativeLayout>
